--- a/package.json
+++ b/package.json
@@ -22,10 +22,13 @@
     "@hapi/hapi": "^21.4.0",
     "@hapi/jwt": "^3.2.0",
     "@tensorflow/tfjs-node": "^4.22.0",
+    "axios": "^1.9.0",
     "bcrypt": "^6.0.0",
     "cors": "^2.8.5",
     "csv-parser": "^3.2.0",
     "dotenv": "^16.5.0",
+    "fs": "^0.0.1-security",
+    "fs-extra": "^11.3.0",
     "jsonwebtoken": "^9.0.2",
     "mysql": "^2.18.1",
     "mysql2": "^3.14.1"
