--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "bcrypt": "^6.0.0",
     "compute-cosine-similarity": "^1.1.0",
     "cors": "^2.8.5",
+    "crypto": "^1.0.1",
     "csv-parser": "^3.2.0",
     "dotenv": "^16.5.0",
     "fs": "^0.0.1-security",
@@ -34,6 +35,7 @@
     "jsonwebtoken": "^9.0.2",
     "mysql": "^2.18.1",
     "mysql2": "^3.14.1",
+    "nodemailer": "^7.0.3",
     "numpy-parser": "^1.2.3"
   }
 }
