--- a/package.json
+++ b/package.json
@@ -19,12 +19,14 @@
   },
   "homepage": "https://github.com/Capstone-Project-CodingCamp2025/back-end#readme",
   "dependencies": {
+    "@hapi/bell": "^13.1.0",
     "@hapi/hapi": "^21.4.0",
     "@hapi/inert": "^7.1.0",
     "@hapi/jwt": "^3.2.0",
     "@tensorflow/tfjs-node": "^4.22.0",
     "axios": "^1.9.0",
     "bcrypt": "^6.0.0",
+    "bcryptjs": "^3.0.2",
     "compute-cosine-similarity": "^1.1.0",
     "cors": "^2.8.5",
     "crypto": "^1.0.1",
@@ -32,10 +34,13 @@
     "dotenv": "^16.5.0",
     "fs": "^0.0.1-security",
     "fs-extra": "^11.3.0",
+    "googleapis": "^150.0.1",
     "jsonwebtoken": "^9.0.2",
     "mysql": "^2.18.1",
     "mysql2": "^3.14.1",
     "nodemailer": "^7.0.3",
-    "numpy-parser": "^1.2.3"
+    "numpy-parser": "^1.2.3",
+    "passport": "^0.7.0",
+    "passport-google-oauth20": "^2.0.0"
   }
 }
